src/objects/NIDD_Alarms__x.object
<CustomObject>
    <description>NIDD Alarms</description>
    <externalDataSource>ExternalDS_MIKA</externalDataSource>
    <externalName>NIDD Alarms</externalName>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <description>Domain Name</description>
        <externalDeveloperName>Domain Name</externalDeveloperName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meaning_Of_The_Alarm__c</fullName>
        <description>Meaning Of The Alarm</description>
        <externalDeveloperName>Meaning Of The Alarm</externalDeveloperName>
        <label>Meaning Of The Alarm</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NIDD Alarms</label>
    <pluralLabel>NIDD Alarms</pluralLabel>
</CustomObject>